@@ -1,4 +1,5 @@
 # -*- makefile -*-
+# Generated by genmk.rb, please don't edit!
 
 # For grub-probe.
 sbin_UTILITIES += grub-probe
