@@ -1,4 +1,5 @@
 # -*- makefile -*-
+# Generated by genmk.rb, please don't edit!
 
 COMMON_ASFLAGS	= -m32 -nostdinc -fno-builtin
 COMMON_CFLAGS	= -ffreestanding -mrtd -mregparm=3
