@@ -1,4 +1,5 @@
 # -*- makefile -*-
+# Generated by genmk.rb, please don't edit!
 
 GRUB_MEMORY_MACHINE_LINK_ADDR = 0x8200
 
