@@ -1,4 +1,5 @@
 
+# Generated by genmk.rb, please don't edit!
 # -*- makefile -*-
 
 COMMON_ASFLAGS = -nostdinc -D__ASSEMBLY__
