@@ -1,4 +1,5 @@
 # -*- makefile -*-
+# Generated by genmk.rb, please don't edit!
 
 COMMON_ASFLAGS = -nostdinc -fno-builtin -m64
 COMMON_CFLAGS = -fno-builtin -m64
