@@ -286,6 +286,10 @@ pmodules = []
 programs = []
 scripts = []
 
+l = gets
+print l
+print "# Generated by genmk.rb, please don't edit!\n"
+
 cont = false
 s = nil
 while l = gets
