@@ -1,3 +1,8 @@
+2008-07-28  Pavel Roskin  <proski@gnu.org>
+
+	* genmk.rb: Add a warning to the beginning of the output that
+	it's a generated file and should not be edited.
+
 2008-07-28  Robert Millan  <rmh@aybabtu.com>
 
 	* disk/raid.c (grub_raid_scan_device): Do not abort when two disks
